--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "My personal todo list. Just a fun little project :) aiming to learn redux and a bit of HTTP Auth through this.",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "pg": "^4.4.3"
   },
   "devDependencies": {},
   "scripts": {
