Basic React front end working

--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "My personal todo list. Just a fun little project :) aiming to learn redux and a bit of HTTP Auth through this.",
   "main": "server.js",
   "dependencies": {
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
     "express": "^4.13.3",
-    "pg": "^4.4.3"
+    "jade": "^1.11.0",
+    "pg": "^4.4.3",
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6"
   },
   "devDependencies": {},
   "scripts": {
