--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "description": "My personal todo list. Just a fun little project :) aiming to learn redux and a bit of HTTP Auth through this.",
   "main": "server.js",
   "dependencies": {
+    "babel": "^6.3.26",
+    "babel-cli": "^6.4.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "express": "^4.13.3",
     "jade": "^1.11.0",
     "pg": "^4.4.3",
     "react": "^0.14.6",
-    "react-dom": "^0.14.6"
+    "react-dom": "^0.14.6",
+    "redux": "^3.0.5"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "babel-node server.js"
   },
   "repository": {
     "type": "git",
