--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
   "dependencies": {
     "babel": "^6.3.26",
     "babel-cli": "^6.4.0",
+    "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "express": "^4.13.3",
-    "jade": "^1.11.0",
     "pg": "^4.4.3",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-redux": "^4.0.6",
-    "redux": "^3.0.5"
+    "redux": "^3.0.5",
+    "webpack": "^1.12.11"
   },
   "devDependencies": {},
   "scripts": {
