--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-node server.js"
+    "start": "babel-node server.js",
+    "watch-server": "nodemon --exec npm run babel-node -- server.js",
+    "build-js": "webpack --colors --progress",
+    "watch-js": "webpack --colors --progress --watch"
   },
   "repository": {
     "type": "git",
