--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "body-parser": "^1.14.2",
     "express": "^4.13.3",
     "pg": "^4.4.3",
     "react": "^0.14.6",
