--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^0.14.6",
     "react-redux": "^4.0.6",
     "redux": "^3.0.5",
+    "superagent": "^1.7.1",
     "webpack": "^1.12.11"
   },
   "devDependencies": {},
