--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-cli": "^6.4.0",
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.1",
+    "babel-plugin-transform-object-assign": "^6.5.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "body-parser": "^1.14.2",
